# SkillForge

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  lego_steps.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
apps/employee/: README.md
apps/manager/: README.md
backend/: .env.example  requirements-yolo.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py
backend/tests/: test_candidate_and_coordinates.py  test_candidate_verifier.py  test_command_parser.py  test_detector_integration.py  test_lego_verifier.py  test_tracker.py  (+2 more)
brain/: README.md
docs/: YOLO_INTEGRATION.md  architecture.md  gbrain-integration.md  gstack-integration.md  manual-test-plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
sample_videos/: README.md
scripts/: generate_sample_videos.py  setup-gbrain.sh
services/api/: .env.example  README.md  pyproject.toml
services/api/skillforge_api/: __init__.py  main.py  store.py
services/api/skillforge_api/gbrain/: __init__.py  cli_client.py  connector.py
services/api/skillforge_api/routes/: assignments.py  gbrain.py  skills.py
services/api/skillforge_api/structuring/: __init__.py  engine.py
services/api/tests/: test_gbrain_integration.py
services/cv-verification/: instructions.txt  pyproject.toml
services/cv-verification/lego_ar/: __init__.py  __main__.py  ar_overlay.py  block_detector.py  instruction_parser.py  main.py  step_verifier.py
services/cv-verification/tests/: test_instruction_parser.py  test_step_verifier.py
(+34 files in other folders)
