[project]
name = "skillforge-lego-ar"
version = "0.1.0"
description = "OpenCV LEGO block detection with AR-guided assembly steps"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.scripts]
lego-ar = "lego_ar.main:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lego_ar*"]